--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -41,6 +41,10 @@ task dist(type: Jar) {
     with jar
 }
 
+dependencies {
+    implementation 'junit:junit:4.13.1'
+}
+
 
 dist.dependsOn classes
 
